# GBLLM

./: LICENSE  README.md
baselines/EffiSkill/: README.md  pyproject.toml
baselines/EffiSkill/configs/: providers.example.yaml
baselines/EffiSkill/data/rq4/fix-version/data/: cluster_profiles.jsonl  cluster_summaries.jsonl  cluster_summaries_raw.jsonl  clusters.jsonl  trace_profiles.jsonl
baselines/EffiSkill/data/rq4/fix-version/skills/: registry.json
baselines/EffiSkill/data/rq4/gpt5_effiskill/private/: stats_rank_2.json  stats_rank_5.json  stats_rank_6.json  stats_rank_8.json
baselines/EffiSkill/data/rq4/gpt5_effiskill/public/: stats_original.json  stats_rank_2.json  stats_rank_3.json  stats_rank_7.json  stats_rank_8.json
baselines/EffiSkill/data/rq4/qwen30b-effiskill/private/: stats_original.json  stats_rank_1.json  stats_rank_2.json  stats_rank_4.json  stats_rank_5.json  stats_rank_6.json  stats_rank_7.json  stats_rank_8.json
baselines/EffiSkill/data/rq4/qwen30b-effiskill/public/: runtime_camparison.csv  stats_best_direct.json  stats_rank_2.json  (+4 more)
baselines/EffiSkill/outputs/rq1/: table1_rq1.csv  table1_rq1.tex
baselines/EffiSkill/outputs/rq4/: rq4_claims.csv  table3_skill_family_summary.csv  table3_skill_family_summary.tex
baselines/EffiSkill/src/effiskill_artifact/: __init__.py  build_registry_cpp.py  cli.py  extract_skill_prompts.py  extract_skill_prompts_cpp.py  extract_skills.py  extract_skills_cpp.py  infer_noexec.py  infer_noexec_cpp.py  llm_utils.py  pairs_to_traces.py  pairs_to_traces_cpp.py  paper_rq1.py  paper_rq4.py  paths.py
(+552 files in other folders)
