[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "effiskill-ase2026-artifact"
version = "0.1.0"
description = "ASE 2026 artifact package for EffiSkill."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "numpy>=1.23.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
  "scipy>=1.10.0",
  "scikit-learn>=1.3.0",
  "tqdm>=4.66.0",
  "sentence-transformers>=2.2.0",
  "hdbscan>=0.8.33",
]

[project.scripts]
effiskill-artifact = "effiskill_artifact.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
